# python-eventstream

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
examples/: README.md  fastapi_publisher.py  fastapi_websocket_consumer.py  worker_consumer.py
scripts/: redis.sh
src/eventstream/: client.py  exceptions.py  models.py
src/eventstream/backends/: __init__.py  interface.py  redis.py
